<resources>
    <string name="app_name">AMRITA TRANSPORT ASSIST</string>

    <string name="button">GET BUS</string>
    <string name="bus_no_route_no_bus_name">BUS NO /ROUTE NO / BUS NAME</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="end">END</string>
    <string name="enter_des">Enter Destination</string>
    <string name="enter_source">Enter Source</string>
    <string name="destination">DESTINATION</string>
    <string name="source">SOURCE</string>
    <string name="no_more_stops">NO MORE STOPS</string>
    <string name="t">-----------</string>
    <string name="tfo">--:--</string>
    <string name="get">GET</string>
    <string name="bus_between_stops">BUS BETWEEN STOPS</string>
    <string name="signin">signin</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="driver">Driver</string>
    <string name="enter_register_number">Enter Register Number</string>
    <string name="enter_the_phone_number">Enter the phone Number</string>
    <string name="enter_the_bus_route">Enter the Bus route</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="enter_the_confirm_password">Enter the confirm password</string>
    <string name="register">Register</string>
    <string name="enter_the_date_of_birth">Enter the date of birth</string>
    <string name="enter_the_department">Enter the Department</string>
    <string name="enter_the_boarding_point">Enter the boarding point</string>
    <string name="title_activity_location">locationActivity</string>
    <string name="amrita_insitutions_nagercoil">AMRITA INSTITUTIONS,NAGERCOIL</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="direct_to_bus">direct to bus</string>
    <string name="bus_route">bus route</string>
    <string name="d">route to college</string>
    <string name="signout">signout</string>
    <string name="signout1">(signout)</string>
    <string name="proftext">proftext</string>
    <string name="profile">profile</string>
    <string name="are_you_new_user_click_to_create_an_account">Are you New user???click to create an account</string>


</resources>
