<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    android:orientation="vertical"
    tools:context=".userActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_on_secondary"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activityf"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/common_google_signin_btn_text_dark_focused"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/progdi"
                    android:layout_width="match_parent"
                    android:layout_height="735dp"
                    android:background="#00D50808"
                    android:orientation="vertical"
                    android:visibility="visible"
                    tools:visibility="visible">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activityfr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/searchBarSearchIconTintColor"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView31"
                        android:layout_width="138dp"
                        android:layout_height="76dp"
                        android:layout_gravity="center"
                        android:contentDescription="TODO"
                        app:srcCompat="@drawable/a" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:text="@string/amrita_insitutions_nagercoil"
                        android:textColor="#03A9F4"
                        android:textSize="24sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/userlog"
                            android:layout_width="300dp"
                            android:layout_height="537dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@color/design_default_color_on_secondary"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_marginTop="20dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/common_google_signin_btn_text_dark_default"
                                    android:ems="10"
                                    android:hint="@string/enter_the_email"
                                    android:inputType="textEmailAddress"
                                    android:textSize="24sp" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="80dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/common_google_signin_btn_text_dark_default"
                                    android:ems="10"
                                    android:hint="@string/enter_the_password"
                                    android:inputType="date"
                                    android:textSize="24sp" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <Button
                                android:id="@+id/sign"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                android:text="@string/signin" />


                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/are_you_new_user_click_to_create_an_account"
                                android:textColor="#11FA1C" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/amma" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/userre"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:background="@color/common_google_signin_btn_text_dark_focused"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/uname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                    android:ems="10"
                                    android:hint="@string/enter_the_name"
                                    android:inputType="textPersonName"
                                    android:text="" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/uemail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                    android:ems="10"
                                    android:hint="@string/enter_the_email"
                                    android:inputType="textEmailAddress" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/dob"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                    android:ems="10"

                                    android:hint="@string/enter_the_date_of_birth"
                                    android:inputType="date" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatAutoCompleteTextView

                                    android:id="@+id/board"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                    android:hint="@string/enter_the_boarding_point"
                                    android:text="" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatAutoCompleteTextView

                                    android:id="@+id/dept"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                    android:hint="@string/enter_the_department"
                                    android:text="" />
                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText

                                    android:id="@+id/regno"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                    android:ems="10"
                                    android:hint="@string/enter_register_number"
                                    android:inputType="number"
                                    android:text="" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <Button
                                android:id="@+id/register"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                                android:text="@string/register" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="driver please click here????"
                                android:textColor="#F44336" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/amma" />

                        </LinearLayout>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageView6"
                            android:layout_width="43dp"
                            android:layout_height="42dp"
                            android:layout_marginStart="150dp"
                            android:background="@drawable/shape"
                            app:srcCompat="@drawable/use1" />


                    </RelativeLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="751dp"
                    android:background="@drawable/backaa" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible"
            tools:visibility="invisible" />


    </LinearLayout>


</ScrollView>